Triangle function updated and Rectangle Section finished with js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <!-- shape card container -->
             <div class="flex-1 grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- Triangle card -->
-                <div class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-pink-400">
+                <div
+                    class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-pink-400 transition delay-100 duration-700 ease-in-out">
                     <figure class="p-12 relative">
                         <img src="/images//triangle.png" class="h-48" alt="Triangle image" />
                         <div class="absolute mt-12 text-center" id="triangle-b-h-area-display-container" hidden>
@@ -54,25 +55,35 @@
                     </div>
                 </div>
                 <!-- Rectangle -->
-                <div class="card card-compact bg-base-100 shadow-xl p-2">
+                <div
+                    class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-cyan-400 transition delay-100 duration-700 ease-in-out">
                     <figure class="p-12">
                         <img src="/images//rectangle.png" class="h-48" alt="Rectangle image" />
+                        <div class="absolute mt-12 text-center" id="rectangle-w-l-area-display-container" hidden>
+                            <div>
+                                <samp>b = </samp><span id="rectangle-width"></span> <span>cm</span> <br>
+                                <samp>h = </samp><span id="rectangle-length"></span> <span>cm</span>
+                            </div>
+                            <div class="mt-2">
+                                <span>Area = </span><span id="rectangle-area"></span><span> cm<sup>2</sup></span>
+                            </div>
+                        </div>
                     </figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold text-center">Rectangle</h2>
                         <p class="text-center">Area (A) = w x l</p>
                         <div class="flex mt-5">
                             <div class="flex-1">
-                                <input type="number" placeholder="w" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="rectangle-width-input" type="number" placeholder="w" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                             <div class="flex-1">
-                                <input type="number" placeholder="l" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="rectangle-length-input" type="number" placeholder="l" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                         </div>
                         <div class="card-actions justify-center mt-10">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button onclick="calculateRectangleArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
@@ -83,14 +94,14 @@
                     </figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold text-center">Parallelogram</h2>
-                        <p class="text-center">Area (A) = b x h</p>
+                        <p class="text-center">Area (A) = w x l</p>
                         <div class="flex mt-5">
                             <div class="flex-1">
-                                <input type="number" placeholder="b" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input type="number" placeholder="w" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                             <div class="flex-1">
-                                <input type="number" placeholder="h" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input type="number" placeholder="l" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                         </div>
