--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-cyan-400 transition delay-100 duration-700 ease-in-out">
                     <figure class="p-12 relative">
                         <img src="/images//rectangle.png" class="h-48" alt="Rectangle image" />
-                        <div class="absolute mt-12 text-center" id="rectangle-w-l-area-display-container" hidden>
+                        <div class="absolute text-center" id="rectangle-w-l-area-display-container" hidden>
                             <div>
                                 <samp>b = </samp><span id="rectangle-width"></span> <span>cm</span> <br>
                                 <samp>h = </samp><span id="rectangle-length"></span> <span>cm</span>
@@ -94,7 +94,7 @@
                     class="card card-compact bg-base-100 shadow-xl p-2  hover:bg-red-400 transition delay-100 duration-700 ease-in-out">
                     <figure class="p-12">
                         <img src="/images//parallelogram.png" class="h-48" alt="Parallelogram image" />
-                        <div class="absolute mt-12 text-center" id="parallelogram-b-h-area-display-container" hidden>
+                        <div class="absolute text-center" id="parallelogram-b-h-area-display-container" hidden>
                             <div>
                                 <samp>b = </samp><span id="parallelogram-base"></span> <span>cm</span> <br>
                                 <samp>h = </samp><span id="parallelogram-height"></span> <span>cm</span>
@@ -128,9 +128,9 @@
                 <!-- Rhombus -->
                 <div
                     class="card card-compact bg-base-100 shadow-xl p-2  hover:bg-teal-400 transition delay-100 duration-700 ease-in-out">
-                    <figure class="p-12 relative">
+                    <figure class="relative p-12 ">
                         <img src="/images//rhombus.png" class="h-48" alt="Rhombus image" />
-                        <div class="absolute mt-12 text-center" id="rhombus-d1-d2-area-display-container" hidden>
+                        <div class="absolute text-center" id="rhombus-d1-d2-area-display-container" hidden>
                             <div>
                                 <samp>d<sub>1</sub> = </samp><span id="rhombus-d1"></span> <span>cm</span> <br>
                                 <samp>d<sub>2</sub> = </samp><span id="rhombus-d2"></span> <span>cm</span>
@@ -160,47 +160,69 @@
                         </div>
                     </div>
                 </div>
-                <div class="card card-compact bg-base-100 shadow-xl p-2">
-                    <figure class="p-12">
-                        <img src="/images//triangle.png" class="h-48" alt="Triangle image" />
+                <!-- Pentagon -->
+                <div
+                    class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-red-400 transition delay-100 duration-700 ease-in-out">
+                    <figure class="relative p-12">
+                        <img src="/images//pentagon.png" class="h-48" alt="Pentagon image" />
+                        <div class="absolute text-center" id="pentagon-p-a-area-display-container" hidden>
+                            <div>
+                                <samp>d<sub>1</sub> = </samp><span id="pentagon-p"></span> <span>cm</span> <br>
+                                <samp>d<sub>2</sub> = </samp><span id="pentagon-a"></span> <span>cm</span>
+                            </div>
+                            <div class="mt-2">
+                                <span>Area = </span><span id="pentagon-area"></span><span> cm<sup>2</sup></span>
+                            </div>
+                        </div>
                     </figure>
                     <div class="card-body">
-                        <h2 class="text-2xl font-bold text-center">Triangle</h2>
-                        <p class="text-center">Area (A) = 0.5 x b x h</p>
+                        <h2 class="text-2xl font-bold text-center">Pentagon</h2>
+                        <p class="text-center">Area (A) = 0.5 x p x a</p>
                         <div class="flex mt-5">
                             <div class="flex-1">
-                                <input type="number" placeholder="b" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="perimeter-input" type="number" placeholder="p" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                             <div class="flex-1">
-                                <input type="number" placeholder="h" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="apothem-input" type="number" placeholder="b" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                         </div>
                         <div class="card-actions justify-center mt-10">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button onclick="calculatePentagonArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
-                <div class="card card-compact bg-base-100 shadow-xl p-2">
+                <!-- Ellipse -->
+                <div
+                    class="card card-compact bg-base-100 shadow-xl p-2 hover:bg-teal-400 transition delay-100 duration-700 ease-in-out">
                     <figure class="p-12">
-                        <img src="/images//triangle.png" class="h-48" alt="Triangle image" />
+                        <img src="/images//ellipse.png" class="h-48" alt="Ellipse image" />
+                        <div class="absolute text-center" id="ellipse-a-b-area-display-container" hidden>
+                            <div>
+                                <samp>a = </samp><span id="a-axis"></span> <span>cm</span> <br>
+                                <samp>b = </samp><span id="b-axis"></span> <span>cm</span>
+                            </div>
+                            <div class="mt-2">
+                                <span>Area = </span><span id="ellipse-area"></span><span> cm<sup>2</sup></span>
+                            </div>
+                        </div>
                     </figure>
                     <div class="card-body">
-                        <h2 class="text-2xl font-bold text-center">Triangle</h2>
-                        <p class="text-center">Area (A) = 0.5 x b x h</p>
+                        <h2 class="text-2xl font-bold text-center">Ellipse</h2>
+                        <p class="text-center">Area (A) = &#8508;ab</p>
                         <div class="flex mt-5">
                             <div class="flex-1">
-                                <input type="number" placeholder="b" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="a-axis-input" type="number" placeholder="a" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                             <div class="flex-1">
-                                <input type="number" placeholder="h" class="p-1 w-24 bg-[#F1F1F1]">
+                                <input id="b-axis-input" type="number" placeholder="b" class="p-1 w-24 bg-[#F1F1F1]">
                                 <span>cm</span>
                             </div>
                         </div>
                         <div class="card-actions justify-center mt-10">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button onclick="calculateEllipseArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
