Reusable function for similar task added for triangle & rectangle

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
             <!-- area calculation container/ sidebar -->
             <div class="w-[370px] border border-gray-200">
-                <h3 class="text-xl font-bold">Area calculation</h3>
+                <h3 class="text-xl font-bold underline text-center">Area calculation</h3>
             </div>
         </div>
     </main>
