Resable function added in js for Rhombus

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                         <div class="card-actions justify-center mt-10">
-                            <button onclick="rhombusArea()" class="btn btn-primary w-full">Calculate</button>
+                            <button onclick="calculateRhombusArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
